# kaito-rag-api

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt  test-requirements.txt
.github/workflows/: create-release-branch.yaml  create-release.yaml  publish-to-pypi-test.yaml
kaito_rag_client/api/default/: chat_completions_v1_chat_completions_post.py
kaito_rag_client/models/: __init__.py  chat_completions_v1_chat_completions_post_request.py  query_request.py  query_request_llm_params_type_0.py  query_request_rerank_params_type_0.py  query_response_metadata_type_0.py
kaito_rag_engine_client/api/query/: query_index.py
src/: kaito_rag_client.py
src/kaito_rag_engine_client/models/: __init__.py  annotation.py  annotation_url_citation.py  chat_completion_audio.py  chat_completion_message.py  chat_completion_message_tool_call.py  chat_completion_response.py  chat_completion_response_service_tier_type_0.py  chat_completion_token_logprob.py  chat_request.py  choice.py  choice_logprobs.py  completion_tokens_details.py  completion_usage.py  delete_document_request.py  delete_document_response.py  document.py  document_metadata_type_0.py  function.py  function_call.py  health_status.py  index_request.py  list_documents_response.py  node_with_score.py  node_with_score_metadata_type_0.py  prompt_tokens_details.py  query_response.py  retrieve_request.py  retrieve_request_metadata_filter_type_0.py  retrieve_response.py  top_logprob.py  (+2 more)
test/: test_rag_engine_client.py
tests/: __init__.py  test_kaito_rag_client.py
(+12 files in other folders)
